Förberett protokoll inför sektionsmöte

--- a/vintermote-2024/foredragningslista-vintermote-2024/slutgiltig-foredragningslista-vintermote-2024.tex
+++ b/vintermote-2024/foredragningslista-vintermote-2024/slutgiltig-foredragningslista-vintermote-2024.tex
@@ -3,14 +3,14 @@
 % \usepackage{titling}
 \usepackage{enumitem}
 
-\title{Preliminär föredragningslista}
-\date{2024-01-12} 
+\title{Slutgiltig föredragningslista}
+\date{2024-01-24} 
 
 \begin{document}
 
 \large
 \begin{center}
-  {\LARGE\bfseries Preliminär föredragningslista för D-sektionens vintermöte 2024}
+  {\LARGE\bfseries Slutgiltig föredragningslista för D-sektionens vintermöte 2024}
   \vspace{2mm}
 \end{center}
 
@@ -58,7 +58,7 @@
         \begin{enumerate}[label*=\arabic*.,leftmargin=3em]
           \item Inga inkomna motioner eller propositioner.
         \end{enumerate}
-  \item Presentation av STABEN 24/25
+  \item Presentation av STABEN 2024
   \item Personval
         \begin{enumerate}[label*=\arabic*.,leftmargin=3em]
           \item Sektionsordförande 24/25
