--- a/vintermote-2024/kallelse-vintermote-2024/kallelse-vintermote-2024.tex
+++ b/vintermote-2024/kallelse-vintermote-2024/kallelse-vintermote-2024.tex
@@ -3,7 +3,7 @@
 \usepackage{titling}
 
 \title{Kallelse till vintermöte}
-\date{2023-11-06} 
+\date{2024-01-12} 
 
 \begin{document}
 % \hspace{0pt}
@@ -29,11 +29,11 @@
   \vspace{2mm}
 \end{center}
 
-Medlemmar i sektionen kallas till ordinarie vintermöte den 31 januari 2021. 
+Medlemmar i sektionen kallas till ordinarie vintermöte den 28 januari 2024. 
 
 Detta är ett av sektionens tre ordinarie sektionsmöten. Sektionsmöten är sektionens högst beslutande organ där du som medlem har möjligheten att vara med och besluta om sektionens verksamhet. 
 
-Styrelsen bjuder även på pizza, så missa inte anmälan för det! Sista anmälningsdag är x/1. Mer information finns på hemsidan.
+Styrelsen bjuder även på pizza, så missa inte anmälan för det! Sista anmälningsdag är 24/1. Mer information finns på hemsidan.
 
 \vspace*{4mm}
 \begin{itemize}
