Update meeting minutes for vintermote-2024

--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -183,9 +183,17 @@ Disskussion uppstår.
 
 Valberedningen nominerar \textbf{Tove Winddotter} till vice ordförande 24/25.
 
+\textbf{Elliot Eriksson} nominerar sig själv.
+
+\textbf{Elliot Eriksson} lämnar mötet.
+
 \textbf{Tove Winddotter} presenterar sig själv.\\
 \textbf{Tove Winddotter} svarar på frågor.\\
 \textbf{Tove Winddotter} lämnar mötet.
+
+\textbf{Elliot Eriksson} presenterar sig själv.\\
+\textbf{Elliot Eriksson} svarar på frågor.\\
+\textbf{Elliot Eriksson} lämnar mötet.
 
 \textbf{XX} läser upp Valberedningens motivering för \textbf{Tove Winddotter}.
 
@@ -255,11 +263,18 @@ Disskussion uppstår.
 
 Valberedningen har ingen nominering för eventutskottets ordförande 24/25.
 
-\textbf{Bacilika Glansholm} nominerar sig själv.
+\textbf{Bacilika Glansholm} nominerar sig själv. \\
+\textbf{Alexander Bucht Linde} nominerar sig själv. 
+
+\textbf{Alexander Bucht Linde} lämnar mötet.
 
 \textbf{Bacilika Glansholm} presenterar sig själv.\\
 \textbf{Bacilika Glansholm} svarar på frågor.\\
 \textbf{Bacilika Glansholm} lämnar mötet.
+
+\textbf{Alexander Bucht Linde} presenterar sig själv.\\
+\textbf{Alexander Bucht Linde} svarar på frågor.\\
+\textbf{Alexander Bucht Linde} lämnar mötet.
 
 Disskussion uppstår.
 
