--- a/vintermote-2024/protokoll-vintermote-2024/sections/RoM.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/sections/RoM.tex
@@ -57,7 +57,7 @@
 
 
 \subsection{Ekonomiutskottet}
-\textbf{Henrik Thorén } presenterar på sektionsmötet.
+\textbf{Henrik Thorén} presenterar på sektionsmötet.
 
 
 
@@ -77,7 +77,7 @@
 
 
 \subsection{STABEN}
-\textbf{Helena Girmai} presenterar på sektionsmötet.
+\textbf{Tobias Elfstrand} presenterar på sektionsmötet.
 
 
 
