Update date in vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex

--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -8,7 +8,7 @@
 \newcommand{\rostlangd}[1]{Röstlängden är \textbf{#1}.}
 
 \title{Protokoll | D-sektionens vintermöte 2024}
-\date{2023-xx-xx}
+\date{2023-01-28}
 
 \begin{document}
 % ----------------------
@@ -109,6 +109,8 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 \pagebreak
 \section{Sektionens ekonomiska läge}
 Sektionskassör \textbf{Henrik Thorén} presenterar på sektionsmötet.
+
+
 
 % ----------------------
 \section{Budgetrevidering}
@@ -241,6 +243,9 @@ Disskussion uppstår.
 \motetbeslutar
 \att{} välja \textbf{XX} till utbildningsutskottets ordförande 24/25.
 
+\motetbeslutar
+\att{} vakantsätta posten utbildningsutskottets ordförande 24/25.
+
 \subsection{Arbetsmiljöombud 24/25}
 
 Valberedningen har ingen nominering för arbetsmiljöombud 24/25.
@@ -286,18 +291,17 @@ Disskussion uppstår.
 
 \subsection{Styrelseledamöter 24/25}
 
+\motetbeslutar
+\att{} fastställa antal styrelseledamöter till \textbf{2}.
+
 Valberedningen nominerar \textbf{Henrik Rehn} och \textbf{Adam Rylander} till styrelseledamöter 24/25. \\
+\textbf{Henrik Rehn} mottar ej nomineringen. \\
 \textbf{Adam Rylander} mottar ej nomineringen.
 
 \textbf{Manfred Clase} nominerar sig själv. \\
 \textbf{Mateo Schütt Zalabardo} nominerar sig själv. 
 
-\textbf{Manfred Clase} lämnar mötet. \\
 \textbf{Mateo Schütt Zalabardo} lämnar mötet.
-
-\textbf{Henrik Rehn} presenterar sig själv.\\
-\textbf{Henrik Rehn} svarar på frågor.\\
-\textbf{Henrik Rehn} lämnar mötet.
 
 \textbf{Manfred Clase} presenterar sig själv.\\
 \textbf{Manfred Clase} svarar på frågor.\\
@@ -358,6 +362,7 @@ Valberedningen nominerar \textbf{Agnes Gustafson} till damföreningens kassör 2
 \textbf{Jessica Andersson} lämnar mötet.
 
 \textbf{XX} läser upp Valberedningens motivering för \textbf{Agnes Gustafson}.
+
 
 Disskussion uppstår.
 
