Update sections in protokoll-vintermote-2024.tex

--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -5,10 +5,10 @@
 \newcommand{\ind}{\hspace*{2em}}
 \newcommand{\motetbeslutar}{\textbf{Mötet beslutar}}
 \newcommand{\att}{\\\ind\textbf{att}}
-\newcommand{\rostlangd}[1]{Röstlängden är \textbf{#1}.}
+\newcommand{\rostlangd}[1]{\motetbeslutar\att{} fastställa röstlängden till \textbf{#1}.}
 
 \title{Protokoll | D-sektionens vintermöte 2024}
-\date{2023-01-28}
+\date{2023-XX-XX}
 
 \begin{document}
 % ----------------------
@@ -53,7 +53,7 @@
 
 % ----------------------
 \section{Mötets öppnande}
-Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \textbf{xx:xx}.
+Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \textbf{15:21}.
 
 
 
@@ -67,7 +67,7 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 \motetbeslutar\att{} välja Sekreterare \textbf{Felix Ramnelöv} till mötessekreterare.
 
 \subsection{Justeringsperson, Rösträknare}
-\motetbeslutar\att{} välja \textbf{XX} och \textbf{XX} till justeringspersoner tillika rösträknare.
+\motetbeslutar\att{} välja \textbf{Philip Batan} och \textbf{Tobias Elfstrand} till justeringspersoner tillika rösträknare.
 
 
 % ----------------------
@@ -75,8 +75,7 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 
 
 
-\motetbeslutar
-\att{} fastställa röstlängden till \textbf{XX}.
+\rostlangd{88}
 
 
 
@@ -84,48 +83,48 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 \section{Fastställande av mötets stadgeenliga utlysande}
 \textbf{Felix Ramnelöv} berättar hur och när mötet blivit utlyst.
 
-\motetbeslutar
-\att{} mötet utlysts stadgeenligt.
+\motetbeslutar\att{} mötet utlysts stadgeenligt.
 
 
 
 % ----------------------
-\pagebreak
 \section{Fastställande av föredragningslista}
 \textbf{Silva Havluciyan} presenterar ändringar från den preliminära till den slutgiltiga föredragningslistan.
 
 \textbf{Silva Havluciyan} föreslår att fastställa den slutgiltiga föredragningslistan.
 
 \motetbeslutar\att{} fastställa föredragningslistan.
+\pagebreak
 
 
 % ----------------------
 \section{Rapport och meddelanden från styrelsen och kansliet}
-\subfile{./sections/RoM.tex}
-
+\subfile{./sections/rom.tex}
 
 
 % ----------------------
-\pagebreak
+\section{Styrelsen informerar}
+Styrelsen vill informera om att 28 febreari kommer sektionsaktivas mid-off att ske, info om var kommer snart.
+
+Dessutom kommer sektionsfotografering att ske 6 februari i Skrivsalen, Kårallen. Tider för klasser och utskott finns i det tillhörande Facebook-enventet.
+
+% ----------------------
 \section{Sektionens ekonomiska läge}
 Sektionskassör \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
+Vi har tappat samarbetet för sektionsrummet Netligt. Det har i almänhet varit två dåliga år för samarbeten, vi har inga långtgående samarbetsavtal med företag. Detta har delvis att göra med att Näringslivsutskottet kommit igång sent.
 
+Flera utskott har rapporterat att de har haft svårt att få in pengar. Däremot plussade Arbetsmarknadsgruppen mycket vilket kommer att väga upp en del.
+
+Vissa saker går bra, andra dåligt, det är svårt att säga exakt vart vi kommer landa men sektionen kommer inte gå under de närmsta två åren.
 
 % ----------------------
 \section{Budgetrevidering}
 Sektionskassör \textbf{Henrik Thorén} presenterar revidering av budget för verksamhetsåret 23/24. Budgetrevideringen finns på \url{https:/d-sektionen.se/vintermote-2024/}.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{88}
 
-\motetbeslutar
-\att{} fastställa den nya rambudgeten.
-
-
-% ----------------------
-\section{Styrelsen informerar}
-Styrelsen vill informera om att ...
+\motetbeslutar\att{} fastställa den nya rambudgeten.
 
 
 % ----------------------
@@ -139,13 +138,20 @@ Inga inkomna motioner eller propositioner.
 
 STABEN 2024 presenterar sig själva och svarar på frågor.
 
+\motetbeslutar\att{} ajournera mötet till kl. \textbf{17:00}.
+
+\motetbeslutar\att{} återuppta mötet kl. \textbf{17:19}.
+
+\rostlangd{114}
+
 % ----------------------
 \pagebreak
 \section{Personval}
 
-\textbf{XX} läser upp valberedningens rekryteringsprocess inför höstmötet 2023.
+\textbf{Fredrik Palm} läser upp valberedningens rekryteringsprocess inför vintermötet 2024.
 
 \subsection{Sektionsordförande 24/25}
+
 Valberedningen nominerar \textbf{Helena Girmai} till sektionsordförande 24/25. \\
 \textbf{Helena Girmai} mottar ej nomineringen.
 
@@ -157,11 +163,9 @@ Valberedningen nominerar \textbf{Helena Girmai} till sektionsordförande 24/25. 
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{114}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till sektionsordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Adam Rylander} till sektionsordförande 24/25.
 
 \subsection{Sektionskassör 24/25}
 
@@ -171,15 +175,13 @@ Valberedningen nominerar \textbf{Erik Nordström} till sektionskassör 24/25.
 \textbf{Erik Nordström} svarar på frågor.\\
 \textbf{Erik Nordström} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Erik Nordström}.
+\textbf{Fredrik Palm} läser upp Valberedningens motivering för \textbf{Erik Nordström}.
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{114}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till sektionskassör 24/25.
+\motetbeslutar\att{} välja \textbf{Erik Nordström} till sektionskassör 24/25.
 
 \subsection{Vice ordförande 24/25}
 
@@ -197,15 +199,13 @@ Valberedningen nominerar \textbf{Tove Winddotter} till vice ordförande 24/25.
 \textbf{Elliot Eriksson} svarar på frågor.\\
 \textbf{Elliot Eriksson} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Tove Winddotter}.
+\textbf{Fredrik Palm} läser upp Valberedningens motivering för \textbf{Tove Winddotter}.
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{112}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till vice ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Tove Winddotter} till vice ordförande 24/25.
 
 \subsection{Sekreterare 24/25}
 
@@ -215,67 +215,33 @@ Valberedningen nominerar \textbf{Daniel Wendin} till sekreterare 24/25.
 \textbf{Daniel Wendin} svarar på frågor.\\
 \textbf{Daniel Wendin} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Daniel Wendin}.
+\textbf{Axel Larsson} läser upp Valberedningens motivering för \textbf{Daniel Wendin}.
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{111}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till sekreterare 24/25.
+\motetbeslutar\att{} välja \textbf{Daniel Wendin} till sekreterare 24/25.
 
 \subsection{Utbildningsutskottets ordförande 24/25}
 
 Valberedningen har ingen nominering för utbildningsutskottets ordförande 24/25.
 
-\textbf{XX} nominerar sig själv.
+\rostlangd{113}
 
-\textbf{XX} presenterar sig själv.\\
-\textbf{XX} svarar på frågor.\\
-\textbf{XX} lämnar mötet.
-
-Disskussion uppstår.
-
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
-
-\motetbeslutar
-\att{} välja \textbf{XX} till utbildningsutskottets ordförande 24/25.
-
-\motetbeslutar
-\att{} vakantsätta posten utbildningsutskottets ordförande 24/25.
+\motetbeslutar\att{} vakantsätta posten utbildningsutskottets ordförande 24/25 och därmed ge Styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
 
 \subsection{Arbetsmiljöombud 24/25}
 
 Valberedningen har ingen nominering för arbetsmiljöombud 24/25.
 
-\textbf{Jessica Kjellin} nominerar sig själv.
-
-\textbf{Jessica Kjellin} presenterar sig själv.\\
-\textbf{Jessica Kjellin} svarar på frågor.\\
-\textbf{Jessica Kjellin} lämnar mötet.
-
-Disskussion uppstår.
-
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
-
-\motetbeslutar
-\att{} välja \textbf{XX} till arbetsmiljöombud 24/25.
+\motetbeslutar\att{} vakantsätta posten arbetsmiljöombud 24/25 och därmed ge Styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
 
 \subsection{Eventutskottets ordförande 24/25}
 
 Valberedningen har ingen nominering för eventutskottets ordförande 24/25.
 
-\textbf{Bacilika Glansholm} nominerar sig själv. \\
 \textbf{Alexander Bucht Linde} nominerar sig själv. 
-
-\textbf{Alexander Bucht Linde} lämnar mötet.
-
-\textbf{Bacilika Glansholm} presenterar sig själv.\\
-\textbf{Bacilika Glansholm} svarar på frågor.\\
-\textbf{Bacilika Glansholm} lämnar mötet.
 
 \textbf{Alexander Bucht Linde} presenterar sig själv.\\
 \textbf{Alexander Bucht Linde} svarar på frågor.\\
@@ -283,22 +249,19 @@ Valberedningen har ingen nominering för eventutskottets ordförande 24/25.
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{113}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till eventutskottets ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Alexander Bucht Linde} till eventutskottets ordförande 24/25.
 
 \subsection{Styrelseledamöter 24/25}
 
-\motetbeslutar
-\att{} fastställa antal styrelseledamöter till \textbf{2}.
+\motetbeslutar\att{} fastställa antal styrelseledamöter till \textbf{2}.
 
-Valberedningen nominerar \textbf{Henrik Rehn} och \textbf{Adam Rylander} till styrelseledamöter 24/25. \\
-\textbf{Henrik Rehn} mottar ej nomineringen. \\
-\textbf{Adam Rylander} mottar ej nomineringen.
+Valberedningen nominerar \textbf{Adam Rylander} och \textbf{Henrik Rehn} till styrelseledamöter 24/25. \\
+\textbf{Adam Rylander} mottar ej nomineringen.\\
+\textbf{Henrik Rehn} mottar ej nomineringen. 
 
-\textbf{Manfred Clase} nominerar sig själv. \\
+\textbf{Manfred Clase} nominerar sig själv.\\
 \textbf{Mateo Schütt Zalabardo} nominerar sig själv. 
 
 \textbf{Mateo Schütt Zalabardo} lämnar mötet.
@@ -307,25 +270,28 @@ Valberedningen nominerar \textbf{Henrik Rehn} och \textbf{Adam Rylander} till st
 \textbf{Manfred Clase} svarar på frågor.\\
 \textbf{Manfred Clase} lämnar mötet.
 
+Disskussion uppstår.
+
 \textbf{Mateo Schütt Zalabardo} presenterar sig själv.\\
 \textbf{Mateo Schütt Zalabardo} svarar på frågor.\\
 \textbf{Mateo Schütt Zalabardo} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Henrik Rehn}.
-
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{111}
 
-\motetbeslutar
-\att{} välja \textbf{XX} och \textbf{XX} till styrelseledamöter 24/25.
+\motetbeslutar\att{} välja \textbf{Manfred Clase} och \textbf{Mateo Schütt Zalabardo} till styrelseledamöter 24/25.
+
+\motetbeslutar\att{} ajournera mötet till kl. \textbf{19:20}.
+
+\motetbeslutar\att{} återuppta mötet kl. \textbf{19:30}.
 
 \subsection{Damföreningens ordförande 24/25}
 
 Valberedningen nominerar \textbf{Jasmin Phan Tran} till damföreningens ordförande 24/25.
 
-\textbf{Frida Strömberg} nominerar sig själv. \\
+\textbf{Frida Strömberg} nominerar sig själv.
+
 \textbf{Frida Strömberg} lämnar mötet.
 
 \textbf{Jasmin Phan Tran} presenterar sig själv.\\
@@ -340,11 +306,9 @@ Valberedningen nominerar \textbf{Jasmin Phan Tran} till damföreningens ordföra
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{XX}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
 
 \subsection{Damföreningens kassör 24/25}
 
@@ -363,14 +327,11 @@ Valberedningen nominerar \textbf{Agnes Gustafson} till damföreningens kassör 2
 
 \textbf{XX} läser upp Valberedningens motivering för \textbf{Agnes Gustafson}.
 
-
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{XX}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till damföreningens kassör 24/25.
+\motetbeslutar\att{} välja \textbf{XX} till damföreningens kassör 24/25.
 
 \subsection{Festeriets ordförande 24/25}
 
@@ -384,15 +345,13 @@ Valberedningen nominerar \textbf{Therese Larsson} till festeriets ordförande 24
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{XX}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
 
-\subsection{Damföreningens kassör 24/25}
+\subsection{Festeriets kassör 24/25}
 
-Valberedningen nominerar \textbf{Arvid Ivarsson} till damföreningens kassör 24/25.
+Valberedningen nominerar \textbf{Arvid Ivarsson} till festeriets kassör 24/25.
 
 \textbf{Simon Andersson} nominerar sig själv. \\
 \textbf{Simon Andersson} lämnar mötet.
@@ -409,16 +368,16 @@ Valberedningen nominerar \textbf{Arvid Ivarsson} till damföreningens kassör 24
 
 Disskussion uppstår.
 
-\motetbeslutar
-\att{} fastställa röstlängden till XX.
+\rostlangd{XX}
 
-\motetbeslutar
-\att{} välja \textbf{XX} till damföreningens kassör 24/25.
+\motetbeslutar\att{} välja \textbf{XX} till festeriets kassör 24/25.
 
 \pagebreak
 
 \section{Medaljutdelning}
 Medaljerna kommer delas ut efter mötets avslutande.
+
+Det är för tillfället oklart hur många medaljer som finns för tillfället, därav kommer medaljutdelning istället att ske i samband med vårmötet.
 
 % ----------------------
 \section{Övrigt}
@@ -431,8 +390,6 @@ Ingen fråga lyfts.
 
 
 \textbf{Silva Havluciyan} förklarar mötet avslutat kl \textbf{XX:XX}.
-
-
 
 
 % ----------------------
@@ -449,11 +406,11 @@ Sekreterare Felix Ramnelöv
 
 \vspace*{1.2cm}
 \noindent\rule{8cm}{1pt}\\
-Justeringsperson Jorunn Jóhannesdóttir
+XX
 
 \vspace*{1.2cm}
 \noindent\rule{8cm}{1pt}\\
-Justeringsperson Philip Batan
+XX
 
 
 \end{document}
