--- a/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
@@ -1,104 +1,104 @@
-\documentclass[../protokoll_hostmote_2021.tex]{subfiles}
+\documentclass[../protokoll-vintermote-2024.tex]{subfiles}
 
 \begin{document}
 \subsection{Styrelsen}
-\textbf{Silva Havluciyan} presenterar på sektionsmötet. 
+\textbf{Filip Nygren} presenterar på sektionsmötet. 
  
-
+Styrelsen har hållit i D-forum och diskuterat med övriga styrelser, planerat mid-off, varit på julbord tillsammans, hållit julkalender samt planerat för sektionsfotografering.
 
 \subsection{Eventutskottet}
 \textbf{Bacilika Glansholm} presenterar på sektionsmötet.
 
-
+Eventutskottet har inte gjort så mycket, de har administrerat undergruoper och planerat för event.
 
 \subsubsection{AktU}
 \textbf{Jessica Kjellin} presenterar på sektionsmötet.
 
-
+AktU har haft diverse event, som innebandy, badminon, brädspelskvällar, och planerat för kommande event.
 
 \subsubsection{D20}
 \textbf{Alexander Bucht Linde} presenterar på sektionsmötet. 
 
-
+D20 har haft event och planerar på att delta på Lincon och D-LAN och hålla i fler event.
 
 \subsubsection{D-LAN}
 \textbf{Marcus Dahl} presenterar på sektionsmötet. 
 
-
+D-LAN har fixat och planerat och ska hålla i D-LAN och kanske Sverige Lan.
 
 \subsubsection{D-Band}
 \textbf{Alice Almgren} presenterar på sektionsmötet. 
 
-
+D-Band har repat och spelat, i framtiden ska man fortsätta och rekrytera för nästa D-Band.
 
 \subsubsection{SchlagU}
 \textbf{Filip Jakobsson} presenterar på sektionsmötet. 
 
-
+Schlagu har haft en kick-off, deltagit i julkalendern, samlat in hela 3316 kr till musikhjälpen och haft diverse event. I framtiden ska man hålla i fler event.
 
 \subsection{Alumniutskottet}
 \textbf{Anton Eldeborg Lundin} presenterar på sektionsmötet. 
 
-
+Alumniutsittet har haft lunchföreläsningar och ska hålla i en generationssittning.
 
 \subsection{Arbetsmarknadsgruppen}
 \textbf{Anastasia Saprunova} presenterar på sektionsmötet. 
 
-
+Arbetsmarknadsgruppen har hållit i LINK 2023 och hållit en generationssittning.
 
 \subsection{D-Group}
 \textbf{Disa Kärnbring} presenterar på sektionsmötet.
 
-
+D-Group har hållit i julfesten och i framtiden ska man hålla i DIMD. Man väntar även nya medlemmar.
 
 \subsection{Donna}
 \textbf{Alma Mateo Johansson} presenterar på sektionsmötet.
 
-
+Donna har sedan sist haft en sittning, hållit en kodstuga och diverse andra event. I framtiden ska man hålla i fler event.
 
 \subsection{Ekonomiutskottet}
 \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
-
+Ekonomiutskottet har bokfört och fakturerat.
 
 \subsection{Marknadsföringsutskottet}
 \textbf{Oscar Karlsson} presenterar på sektionsmötet.
 
-
+Marknadsföringsutskottet har planerat D-tour och fått iväg lite hemmissioneringar. Man ska anordna D-tour samt få fler att hemmissionera.
 
 \subsection{Näringslivsutskottet}
 \textbf{Simon Ganning} presenterar på sektionsmötet.
 
-
+Näringslivsutskottet har valt in samtliga personer till utskottet, börjat skriva ett huvudsamarbetsavtal, haft kick-off, marknadsfört. Man letar efter nya samarbeten.
 
 \subsection{Pubutskottet}
 \textbf{Olle Håkansson} presenterar på sektionsmötet.
 
-
+Pubutskottet har varit i Gdansk på studieresa, haft flera pubar och fokuserat på teambuilding. Man ska i framtiden anordra DIMD med D-Group.
 
 \subsection{STABEN}
 \textbf{Tobias Elfstrand} presenterar på sektionsmötet.
 
-
+STABEN har alla blivit invalda, de har haft julhäng, gjort ett julkalenderbidrag, haft överlämning och kommit igång med fokusgrupper. I framtiden ska man börja rekrytera fraddrar.
 
 \subsection{Utbildningsutskottet}
 \textbf{Darja Saed} presenterar på sektionsmötet. 
 
-
+Utbildningsutskottet har varit på internat med nämnden, haft pluggstuga, kursutvärderingar och möten. Man ska fotsätta på samma spår.
  
 \subsection{Valberedningen}
 \textbf{Fredrik Palm} presenterar på sektionsmötet.
 
-
+Valberedningen har rekryterat inför vintermötet, det har varit högt sökrtyck. Man ska börja rekryteringsprocessen för vårmötet.
 
 \subsection{Webbutskottet}
-\textbf{Olle Mineur} presenterar på sektionsmötet.
+\textbf{William Minidis} presenterar på sektionsmötet då webmaster \textbf{Olle Mineur} är frånvarande.
 
-
+Webbutskottet har hållit i Hackaton, haft kodstuga med Donna, fortsatt arbetet med hemsidan och inaktiverat Tesla-bokningen. I framtiden ska man forsätta med arbetet.
 
 \subsection{Werkmästeriet}
-\textbf{Joline Hellström} presenterar på sektionsmötet.
+\textbf{Philip Batan} presenterar på sektionsmötet då intendent \textbf{Joline Hellström} är frånvarande.
 
-
+Werkmästeriet har fixat med bilarna, ordnat nytt släp, haft julfika, inventerat, fixat klart städschemat och planerat vårens arbete. De vill även informera om att släpet har bytt parkeringsplats.
 
 \end{document}
