Update meeting minutes and fix typos

--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -302,19 +302,20 @@ Valberedningen nominerar \textbf{Jasmin Phan Tran} till damföreningens ordföra
 \textbf{Frida Strömberg} svarar på frågor.\\
 \textbf{Frida Strömberg} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Jasmin Phan Tran}.
+\textbf{Sofia Knutas} läser upp Valberedningens motivering för \textbf{Jasmin Phan Tran}.
 
 Disskussion uppstår.
 
-\rostlangd{XX}
+\rostlangd{113}
 
-\motetbeslutar\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Jasmin Phan Tran} till damföreningens ordförande 24/25.
 
 \subsection{Damföreningens kassör 24/25}
 
 Valberedningen nominerar \textbf{Agnes Gustafson} till damföreningens kassör 24/25.
 
-\textbf{Jessica Andersson} nominerar sig själv. \\
+\textbf{Jessica Andersson} nominerar sig själv.
+
 \textbf{Jessica Andersson} lämnar mötet.
 
 \textbf{Agnes Gustafson} presenterar sig själv.\\
@@ -325,13 +326,13 @@ Valberedningen nominerar \textbf{Agnes Gustafson} till damföreningens kassör 2
 \textbf{Jessica Andersson} svarar på frågor.\\
 \textbf{Jessica Andersson} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Agnes Gustafson}.
+\textbf{Sofia Knutas} läser upp Valberedningens motivering för \textbf{Agnes Gustafson}.
 
 Disskussion uppstår.
 
-\rostlangd{XX}
+\rostlangd{113}
 
-\motetbeslutar\att{} välja \textbf{XX} till damföreningens kassör 24/25.
+\motetbeslutar\att{} välja \textbf{Jessica Andersson} till damföreningens kassör 24/25.
 
 \subsection{Festeriets ordförande 24/25}
 
@@ -341,19 +342,20 @@ Valberedningen nominerar \textbf{Therese Larsson} till festeriets ordförande 24
 \textbf{Therese Larsson} svarar på frågor.\\
 \textbf{Therese Larsson} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Therese Larsson}.
+\textbf{Axel Larsson} läser upp Valberedningens motivering för \textbf{Therese Larsson}.
 
 Disskussion uppstår.
 
-\rostlangd{XX}
+\rostlangd{117}
 
-\motetbeslutar\att{} välja \textbf{XX} till damföreningens ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Therese Larsson} till festeriets ordförande 24/25.
 
 \subsection{Festeriets kassör 24/25}
 
 Valberedningen nominerar \textbf{Arvid Ivarsson} till festeriets kassör 24/25.
 
-\textbf{Simon Andersson} nominerar sig själv. \\
+\textbf{Simon Andersson} nominerar sig själv.
+
 \textbf{Simon Andersson} lämnar mötet.
 
 \textbf{Arvid Ivarsson} presenterar sig själv.\\
@@ -364,32 +366,34 @@ Valberedningen nominerar \textbf{Arvid Ivarsson} till festeriets kassör 24/25.
 \textbf{Simon Andersson} svarar på frågor.\\
 \textbf{Simon Andersson} lämnar mötet.
 
-\textbf{XX} läser upp Valberedningens motivering för \textbf{Arvid Ivarsson}.
+\textbf{Fredrik Palm} läser upp Valberedningens motivering för \textbf{Arvid Ivarsson}.
 
 Disskussion uppstår.
 
-\rostlangd{XX}
+\rostlangd{114}
 
-\motetbeslutar\att{} välja \textbf{XX} till festeriets kassör 24/25.
+\motetbeslutar\att{} välja \textbf{Simon Andersson} till festeriets kassör 24/25.
 
 \pagebreak
 
 \section{Medaljutdelning}
-Medaljerna kommer delas ut efter mötets avslutande.
 
-Det är för tillfället oklart hur många medaljer som finns för tillfället, därav kommer medaljutdelning istället att ske i samband med vårmötet.
+Det är för tillfället oklart hur många medaljer som finns, därav kommer medaljutdelning istället att ske i samband med vårmötet.
+
+\motetbeslutar\att{} medaljutdelning sker i samband med vårmötet.
 
 % ----------------------
 \section{Övrigt}
 
-Ingen fråga lyfts.
-
+En fråga lyfts om sektionens bokningskalender, det är den kalender som finnd på Google Drive som gäller. Det har blivit fel då Styrelsen 
+glömt att lägga in preliminärt planerade datum i denna utan direkt lagt in i sektionskalendern. Detta har gjort att det ser ut som Styrelsen 
+valt datum som krockar med andra utskott i medvetande om att de redan är upbokade. Detta är inte fallet och Styrelsen ber om ursäkt för detta. 
 
 % ----------------------
 \section{Mötets avslut}
 
 
-\textbf{Silva Havluciyan} förklarar mötet avslutat kl \textbf{XX:XX}.
+\textbf{Silva Havluciyan} förklarar mötet avslutat kl \textbf{21:40}.
 
 
 % ----------------------
