--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -378,16 +378,19 @@ Disskussion uppstår.
 
 \section{Medaljutdelning}
 
-Det är för tillfället oklart hur många medaljer som finns, därav kommer medaljutdelning istället att ske i samband med vårmötet.
+Det är för tillfället oklart hur många medaljer som finns, därav kommer medaljutdelning ej ske nu.
+
+\rostlangd{117}
 
 \motetbeslutar\att{} medaljutdelning sker i samband med vårmötet.
 
 % ----------------------
 \section{Övrigt}
 
-En fråga lyfts om sektionens bokningskalender, det är den kalender som finnd på Google Drive som gäller. Det har blivit fel då Styrelsen 
-glömt att lägga in preliminärt planerade datum i denna utan direkt lagt in i sektionskalendern. Detta har gjort att det ser ut som Styrelsen 
-valt datum som krockar med andra utskott i medvetande om att de redan är upbokade. Detta är inte fallet och Styrelsen ber om ursäkt för detta. 
+En fråga lyfts om sektionens bokningskalender, det är den kalender som finnd på Google Drive som gäller. Sektionsordförande \textbf{Silva Havluciyan} 
+förklarar att det har blivit fel då Styrelsen glömt att lägga in preliminärt planerade datum i denna utan direkt lagt in i sektionskalendern. 
+Detta har gjort att det ser ut som Styrelsen valt datum som krockar med andra utskott i medvetande om att de redan är upbokade. 
+Detta är inte fallet och Styrelsen ber om ursäkt för detta. 
 
 % ----------------------
 \section{Mötets avslut}
