Fix typos and clarify wording in vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex and vintermote-2024/protokoll-vintermote-2024/sections/rom.tex

--- a/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
@@ -9,22 +9,22 @@ Styrelsen har hållit i D-forum och diskuterat med övriga styrelser, planerat m
 \subsection{Eventutskottet}
 \textbf{Bacilika Glansholm} presenterar på sektionsmötet.
 
-Eventutskottet har inte gjort så mycket, de har administrerat undergruoper och planerat för event.
+Eventutskottet har inte gjort så mycket, de har administrerat undergrupper och planerat för event.
 
 \subsubsection{AktU}
 \textbf{Jessica Kjellin} presenterar på sektionsmötet.
 
-AktU har haft diverse event, som innebandy, badminon, brädspelskvällar, och planerat för kommande event.
+AktU har haft diverse event som innebandy, badminon, brädspelskvällar, och planerat för kommande event.
 
 \subsubsection{D20}
 \textbf{Alexander Bucht Linde} presenterar på sektionsmötet. 
 
-D20 har haft event och planerar på att delta på Lincon och D-LAN och hålla i fler event.
+D20 har hållit event och planerar på att delta på Lincon, delta på D-LAN och hålla i fler event.
 
 \subsubsection{D-LAN}
 \textbf{Marcus Dahl} presenterar på sektionsmötet. 
 
-D-LAN har fixat och planerat och ska hålla i D-LAN och kanske Sverige Lan.
+D-LAN har fixat och planerat inför D-LAN och kanske delta på Sverige Lan.
 
 \subsubsection{D-Band}
 \textbf{Alice Almgren} presenterar på sektionsmötet. 
@@ -44,7 +44,7 @@ Alumniutsittet har haft lunchföreläsningar och ska hålla i en generationssitt
 \subsection{Arbetsmarknadsgruppen}
 \textbf{Anastasia Saprunova} presenterar på sektionsmötet. 
 
-Arbetsmarknadsgruppen har hållit i LINK 2023 och hållit en generationssittning.
+Arbetsmarknadsgruppen har hållit i LINK 2023 och en generationssittning.
 
 \subsection{D-Group}
 \textbf{Disa Kärnbring} presenterar på sektionsmötet.
