--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -112,7 +112,7 @@ Dessutom kommer sektionsfotografering att ske 6 februari i Skrivsalen, Kårallen
 \section{Sektionens ekonomiska läge}
 Sektionskassör \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
-Vi har tappat samarbetet för sektionsrummet Netligt. Det har i almänhet varit två dåliga år för samarbeten, vi har inga långtgående samarbetsavtal med företag. Detta har delvis att göra med att Näringslivsutskottet kommit igång sent.
+Vi har tappat samarbetet för sektionsrummet Netlight. Det har i almänhet varit två dåliga år för samarbeten, vi har inga långtgående samarbetsavtal med företag. Detta har delvis att göra med att Näringslivsutskottet kommit igång sent.
 
 Flera utskott har rapporterat att de har haft svårt att få in pengar. Däremot plussade Arbetsmarknadsgruppen mycket vilket kommer att väga upp en del.
 
@@ -387,7 +387,7 @@ Det är för tillfället oklart hur många medaljer som finns, därav kommer med
 % ----------------------
 \section{Övrigt}
 
-En fråga lyfts om sektionens bokningskalender, det är den kalender som finnd på Google Drive som gäller. Sektionsordförande \textbf{Silva Havluciyan} 
+En fråga lyfts om sektionens bokningskalender, det är den kalender som finns på Google Drive som gäller. Sektionsordförande \textbf{Silva Havluciyan} 
 förklarar att det har blivit fel då Styrelsen glömt att lägga in preliminärt planerade datum i denna utan direkt lagt in i sektionskalendern. 
 Detta har gjort att det ser ut som Styrelsen valt datum som krockar med andra utskott medvetande om att de redan är upbokade. Detta är inte 
 fallet och Styrelsen ber om ursäkt för den förvirrande situationen.  
