--- a/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/protokoll-vintermote-2024.tex
@@ -11,7 +11,7 @@
 \newcommand{\rostlangd}[1]{\motetbeslutar\att{} fastställa röstlängden till \textbf{#1}.}
 
 \title{Protokoll | D-sektionens vintermöte 2024}
-\date{2024-02-XX}
+\date{2024-02-05}
 
 \begin{document}
 % ----------------------
@@ -64,10 +64,10 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 % ----------------------
 \section{Val av mötesfunktionärer}
 \subsection{Mötesordförande}
-\motetbeslutar\att{} välja Ordförande \textbf{Silva Havluciyan} till mötesordförande.
+\motetbeslutar\att{} välja \textbf{Silva Havluciyan} till mötesordförande.
 
 \subsection{Mötessekreterare}
-\motetbeslutar\att{} välja Sekreterare \textbf{Felix Ramnelöv} till mötessekreterare.
+\motetbeslutar\att{} välja \textbf{Felix Ramnelöv} till mötessekreterare.
 
 \subsection{Justeringsperson, Rösträknare}
 \motetbeslutar\att{} välja \textbf{Philip Batan} och \textbf{Tobias Elfstrand} till justeringspersoner tillika rösträknare.
@@ -107,7 +107,7 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 
 % ----------------------
 \section{Styrelsen informerar}
-Styrelsen vill informera om att 28 febreari kommer sektionsaktivas mid-off att ske, info om var kommer snart.
+Styrelsen vill informera om att 28 februari kommer sektionsaktivas mid-off att ske, info om var kommer snart.
 
 Dessutom kommer sektionsfotografering att ske 6 februari i Skrivsalen, Kårallen. Tider för klasser och utskott finns i det tillhörande Facebook-enventet.
 
@@ -115,7 +115,7 @@ Dessutom kommer sektionsfotografering att ske 6 februari i Skrivsalen, Kårallen
 \section{Sektionens ekonomiska läge}
 Sektionskassör \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
-Vi har tappat samarbetet för sektionsrummet Netlight. Det har i almänhet varit två dåliga år för samarbeten, vi har inga långtgående samarbetsavtal med företag. Detta har delvis att göra med att Näringslivsutskottet kommit igång sent.
+Vi har tappat samarbetet för sektionsrummet Netlight. Det har i allmänhet varit två dåliga år för samarbeten, och vi har inget långtgående samarbetsavtal med företag. Detta har delvis att göra med att Näringslivsutskottet kommit igång sent.
 
 Flera utskott har rapporterat att de har haft svårt att få in pengar. Däremot plussade Arbetsmarknadsgruppen mycket vilket kommer att väga upp en del.
 
@@ -123,7 +123,7 @@ Vissa saker går bra, andra dåligt, det är svårt att säga exakt vart vi komm
 
 % ----------------------
 \section{Budgetrevidering}
-Sektionskassör \textbf{Henrik Thorén} presenterar revidering av budget för verksamhetsåret 23/24. Budgetrevideringen finns på \url{https:/d-sektionen.se/vintermote-2024/}.
+Sektionskassör \textbf{Henrik Thorén} presenterar revidering av budget för verksamhetsåret 23/24. Budgetrevideringen finns på \url{https://d-sektionen.se/vintermote-2024/}.
 
 \rostlangd{88}
 
@@ -392,7 +392,7 @@ Det är för tillfället oklart hur många medaljer som finns, därav kommer med
 
 En fråga lyfts om sektionens bokningskalender, det är den kalender som finns på Google Drive som gäller. Sektionsordförande \textbf{Silva Havluciyan} 
 förklarar att det har blivit fel då Styrelsen glömt att lägga in preliminärt planerade datum i denna utan direkt lagt in i sektionskalendern som finns på sektionens hemsida. 
-Detta har gjort att det ser ut som Styrelsen valt datum som krockar med andra utskott medvetande om att de redan är uppbokade. Detta är inte 
+Detta har gjort att det ser ut som Styrelsen valt datum som krockar med andra utskott, medvetande om att de redan är uppbokade. Detta är inte 
 fallet och Styrelsen ber om ursäkt för den förvirrande situationen.  
 
 % ----------------------
