--- a/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
+++ b/vintermote-2024/protokoll-vintermote-2024/sections/rom.tex
@@ -9,12 +9,12 @@ Styrelsen har hållit i D-forum och diskuterat med övriga styrelser, planerat m
 \subsection{Eventutskottet}
 \textbf{Bacilika Glansholm} presenterar på sektionsmötet.
 
-Eventutskottet har inte gjort så mycket, de har administrerat undergrupper och planerat för event.
+Eventutskottet har inte gjort så mycket; de har administrerat undergrupper och planerat för event.
 
 \subsubsection{AktU}
 \textbf{Jessica Kjellin} presenterar på sektionsmötet.
 
-AktU har haft diverse event som innebandy, badminon, brädspelskvällar, och planerat för kommande event.
+AktU har haft diverse event som innebandy, badminton, brädspelskvällar, och planerat för kommande event.
 
 \subsubsection{D20}
 \textbf{Alexander Bucht Linde} presenterar på sektionsmötet. 
@@ -24,7 +24,7 @@ D20 har hållit event och planerar på att delta på Lincon, delta på D-LAN och
 \subsubsection{D-LAN}
 \textbf{Marcus Dahl} presenterar på sektionsmötet. 
 
-D-LAN har fixat och planerat inför D-LAN och kanske delta på Sverige Lan.
+D-LAN har fixat och planerat inför D-LAN och kanske deltar på Sverige Lan.
 
 \subsubsection{D-Band}
 \textbf{Alice Almgren} presenterar på sektionsmötet. 
@@ -54,7 +54,7 @@ D-Group har hållit i julfesten och i framtiden ska man hålla i DIMD. Man vänt
 \subsection{Donna}
 \textbf{Alma Mateo Johansson} presenterar på sektionsmötet.
 
-Donna har sedan sist haft en sittning, hållit en kodstuga och diverse andra event. I framtiden ska man hålla i fler event.
+Donna har sedan sist haft en sittning, hållit en kodstuga och diverse andra event. I framtiden ska de hålla i fler event.
 
 \subsection{Ekonomiutskottet}
 \textbf{Henrik Thorén} presenterar på sektionsmötet.
@@ -69,17 +69,17 @@ Marknadsföringsutskottet har planerat D-tour och fått iväg lite hemmissioneri
 \subsection{Näringslivsutskottet}
 \textbf{Simon Ganning} presenterar på sektionsmötet.
 
-Näringslivsutskottet har valt in samtliga personer till utskottet, börjat skriva ett huvudsamarbetsavtal, haft kick-off, marknadsfört. Man letar efter nya samarbeten.
+Näringslivsutskottet har valt in samtliga personer till utskottet, börjat skriva ett huvudsamarbetsavtal, haft kick-off och marknadsfört. Man letar efter nya samarbeten.
 
 \subsection{Pubutskottet}
 \textbf{Olle Håkansson} presenterar på sektionsmötet.
 
-Pubutskottet har varit i Gdansk på studieresa, haft flera pubar och fokuserat på teambuilding. Man ska i framtiden anordra DIMD med D-Group.
+Pubutskottet har varit i Gdansk på studieresa, haft flera pubar och fokuserat på teambuilding. De ska i framtiden anordra DIMD med D-Group.
 
 \subsection{STABEN}
 \textbf{Tobias Elfstrand} presenterar på sektionsmötet.
 
-STABEN har alla blivit invalda, de har haft julhäng, gjort ett julkalenderbidrag, haft överlämning och kommit igång med fokusgrupper. I framtiden ska man börja rekrytera fraddrar.
+STABEN har alla blivit invalda, de har haft julhäng, gjort ett julkalenderbidrag, haft överlämning och kommit igång med fokusgrupper. I framtiden ska de börja rekrytera fraddrar.
 
 \subsection{Utbildningsutskottet}
 \textbf{Darja Saed} presenterar på sektionsmötet. 
@@ -94,8 +94,7 @@ Valberedningen har rekryterat inför vintermötet, det har varit högt sökrtyck
 \subsection{Webbutskottet}
 \textbf{William Minidis} presenterar på sektionsmötet då webmaster \textbf{Olle Mineur} är frånvarande.
 
-Webbutskottet har hållit i Hackaton, haft kodstuga med Donna, fortsatt arbetet med hemsidan och inaktiverat Tesla-bokningen. I framtiden ska man forsätta med arbetet.
-
+Webbutskottet har hållit i Hackaton, haft kodstuga med Donna, fortsatt arbetet med hemsidan och tagit bort funktionen för att boka teslan på medlemssidan. I framtiden ska de fortsätta med arbetet.
 \subsection{Werkmästeriet}
 \textbf{Philip Batan} presenterar på sektionsmötet då intendent \textbf{Joline Hellström} är frånvarande.
 
